Add check is user role 'admin' midleware
